--- a/global.css
+++ b/global.css
@@ -25,7 +25,7 @@
   }
 
   .font-semibold {
-    font-family: 'DM Sans Semibold' !important;
+    font-family: 'DM Sans Medium' !important;
     font-weight: 600;
   }
 
