--- a/global.css
+++ b/global.css
@@ -39,7 +39,7 @@
 @layer components {
   /* Container Styles */
   .container {
-    @apply flex-1 px-4 pb-8 pt-14;
+    @apply flex-1 px-4 pb-8;
   }
 
   .login-content {
